force-app/main/default/objects/Payment_Gateway_Customer__c/Payment_Gateway_Customer__c.object-meta.xml
<CustomObject>
    <label>Payment Gateway Customer</label>
    <nameField>
        <label>Payment Gatway Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Gateway Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>