force-app/main/default/objects/Payment_Gateway_Customer__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Payment_Gatway_Customer</relationshipName>
    <type>Lookup</type>
</CustomField>