force-app/main/default/objects/Payment_Gateway_Customer__c/fields/Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Gateway</label>
    <referenceTo>Payment_Gateway__c</referenceTo>
    <relationshipName>Payment_Gatway_Customer</relationshipName>
    <type>Lookup</type>
</CustomField>